log
Thu May 12 15:11:18 UTC 2022: 
 tests:  0|5
total_score: 0/70
fc841e0
Thu May 12 15:19:22 UTC 2022: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:62:16: error: implicit declaration of function ‘is_value’; did you mean ‘is_valid’? [-Werror=implicit-function-declaration]
             if(is_value(n)) {
                ^~~~~~~~
                is_valid
sudoku.c:72:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
8840d07
Thu May 12 15:19:30 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:72:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
fbfd954
